--- a/pages/careers/jobapplication.html
+++ b/pages/careers/jobapplication.html
@@ -141,10 +141,9 @@
     <nav class="fixed w-full z-50 glass-effect transition-all duration-300 h-16 shadow-md" id="navbar">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
             <div class="flex justify-between items-center h-full">
-                <a href="../index.html" class="flex-shrink-0 flex items-center gap-2">
-                    <img src="../../images/Ontek.png" onerror="this.src='https://placehold.co/64x64/3B82F6/white?text=OH'" alt="Ontek Horizon Logo" class="h-10 w-auto">
-                    <span class="font-heading font-bold text-xl text-white">Ontek<span class="text-blue-500">Horizon</span></span>
-                </a>
+                <div class="flex-shrink-0 flex items-center gap-2 cursor-pointer" onclick="location.reload()">
+                    <img src="../../images/Ontek.png" onerror="this.src='https://placehold.co/64x64/3B82F6/white?text=OH'" alt="Ontek Horizon Logo" class="h-14 w-auto">
+                </div>
 
                 <div class="flex items-center gap-4">
                     <a href="../index.html" class="text-sm font-medium hover:text-white transition-colors">Back to Home</a>
@@ -290,12 +289,31 @@
     <footer class="text-center py-6 text-slate-500 text-sm border-t border-slate-800 bg-black/40">
         &copy; 2025 Ontek Horizon. All rights reserved.
     </footer>
+    
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script>
+        // Firebase Configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyAK6D5o3ethosrnGHNmzAU70Hh8et3okik",
+            authDomain: "ontek-horizon.firebaseapp.com",
+            projectId: "ontek-horizon",
+            storageBucket: "ontek-horizon.firebasestorage.app",
+            messagingSenderId: "210494330142",
+            appId: "1:210494330142:web:09c86a149fdecfb391a50f",
+            measurementId: "G-K9YWTK029X"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+    </script>
+    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({ duration: 800, once: true });
 
-        // Form Handling (Simulated)
-        document.getElementById('jobForm').addEventListener('submit', function(e) {
+        // Form Handling with Firebase
+        document.getElementById('jobForm').addEventListener('submit', async function(e) {
             e.preventDefault();
             const btn = this.querySelector('button[type="submit"]');
             const originalText = btn.innerHTML;
@@ -303,7 +321,21 @@
             btn.innerHTML = '<i class="ph ph-spinner animate-spin text-xl"></i> Sending...';
             btn.disabled = true;
 
-            setTimeout(() => {
+            // Collect form data
+            const formData = {
+                fullname: document.getElementById('fullname').value,
+                email: document.getElementById('email').value,
+                phone: document.getElementById('phone').value,
+                position: document.getElementById('position').value,
+                experience: document.getElementById('experience').value,
+                portfolio: document.getElementById('portfolio').value,
+                message: document.getElementById('message').value,
+                submittedAt: new Date().toISOString(),
+                type: 'job_application'
+            };
+
+            try {
+                await db.collection('job_applications').add(formData);
                 btn.innerHTML = '<i class="ph-bold ph-check-circle text-xl"></i> Application Sent!';
                 btn.classList.remove('from-purple-600', 'to-pink-600');
                 btn.classList.add('bg-green-600');
@@ -314,8 +346,14 @@
                     btn.innerHTML = originalText;
                     btn.classList.remove('bg-green-600');
                     btn.classList.add('from-purple-600', 'to-pink-600');
+                    this.reset();
                 }, 1000);
-            }, 1500);
+            } catch (error) {
+                console.error('Error:', error);
+                alert('Something went wrong. Please try again.');
+                btn.disabled = false;
+                btn.innerHTML = originalText;
+            }
         });
 
         // Theme Toggle
