--- a/pages/careers/jobapplication.html
+++ b/pages/careers/jobapplication.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Opportunities - Ontek Horizon</title>
-    <link rel="icon" type="image/png" href="../../images/Ontek.png">
+    <link rel="icon" type="image/png" href="../../images/O.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://unpkg.com">
