--- a/pages/careers.html
+++ b/pages/careers.html
@@ -179,60 +179,63 @@
     </section>
 
     
-    <footer id="contact" class="bg-gray-900 text-white pt-12 sm:pt-16 pb-6 sm:pb-8 border-t border-gray-800">
+    <footer id="contact" class="bg-white text-gray-800 pt-12 sm:pt-16 pb-6 sm:pb-8 border-t border-gray-200">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 sm:gap-10 lg:gap-12 mb-8 sm:mb-12">
-                <div class="col-span-1 lg:col-span-1">
+                <div class="col-span-1 lg:col-span-1" data-aos="fade-up">
                     <div class="flex items-center gap-2 mb-6 cursor-pointer" onclick="window.scrollTo(0,0)">
                         <img src="../images/Ontek.png" onerror="this.src='https://placehold.co/64x64/3B82F6/white?text=OH'" alt="Ontek Horizon Logo" class="h-16 w-auto">
                     </div>
-                    <p class="text-gray-400 text-sm leading-relaxed mb-6">Your partner for scaling globally on Amazon and optimizing digital commerce operations.</p>
+                    <p class="text-gray-600 text-sm leading-relaxed mb-6">Your partner for scaling globally on Amazon and optimizing digital commerce operations.</p>
                     <div class="flex space-x-4">
-                        <a href="https://www.facebook.com/share/1CFhjbwtVv/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors"><i class="ph-fill ph-facebook-logo text-2xl"></i></a>
-                        <a href="https://www.linkedin.com/company/ontek-horizon/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors"><i class="ph-fill ph-linkedin-logo text-2xl"></i></a>
+                        <a href="https://www.facebook.com/share/1CFhjbwtVv/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-blue-600 transition-colors"><i class="ph-fill ph-facebook-logo text-2xl"></i></a>
+                        <a href="#" class="text-gray-600 hover:text-blue-400 transition-colors"><i class="ph-fill ph-twitter-logo text-2xl"></i></a>
+                        <a href="https://www.linkedin.com/company/ontek-horizon/" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-blue-700 transition-colors"><i class="ph-fill ph-linkedin-logo text-2xl"></i></a>
+                        <a href="#" class="text-gray-600 hover:text-pink-600 transition-colors"><i class="ph-fill ph-instagram-logo text-2xl"></i></a>
                     </div>
                 </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Quick Links</h3>
-                    <ul class="space-y-3 text-gray-400 text-sm">
+                <div data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-lg font-semibold text-gray-900 mb-6">Quick Links</h3>
+                    <ul class="space-y-3 text-gray-600 text-sm">
                         <li><a href="aboutus.html" class="hover:text-primary transition-colors">About Us</a></li>
                         <li><a href="services.html" class="hover:text-primary transition-colors">Our Services</a></li>
-                        <li><a href="careers.html" class="hover:text-primary transition-colors">Careers</a></li>
+                        <li><a href="careers.html" class="hover:text-primary transition-colors">Careers & Internships</a></li>
                         <li><a href="team.html" class="hover:text-primary transition-colors">Team Members</a></li>
                         <li><a href="gallery.html" class="hover:text-primary transition-colors">Gallery</a></li>
-                        <li><a href="#contact" class="hover:text-primary transition-colors">Contact</a></li>
+                        <li><a href="#contact" class="hover:text-primary transition-colors">Contact Us</a></li>
                     </ul>
                 </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Services</h3>
-                    <ul class="space-y-3 text-gray-400 text-sm">
+                <div data-aos="fade-up" data-aos-delay="200">
+                    <h3 class="text-lg font-semibold text-gray-900 mb-6">Services</h3>
+                    <ul class="space-y-3 text-gray-600 text-sm">
                         <li>Software Development</li>
                         <li>E-commerce Solutions</li>
-                        <li>Amazon FBA & PCC</li>
+                        <li>Amazon FBA & PPC</li>
                         <li>Digital Marketing</li>
                         <li>Graphics Design</li>
                     </ul>
                 </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Contact Us</h3>
-                    <ul class="space-y-4 text-gray-400 text-sm">
+                <div data-aos="fade-up" data-aos-delay="300">
+                    <h3 class="text-lg font-semibold text-gray-900 mb-6">Contact Us</h3>
+                    <ul class="space-y-4 text-gray-600 text-sm">
                         <li class="flex items-start gap-3"><i class="ph-fill ph-map-pin text-primary mt-1"></i><span>Level-5, Block-C, Silicon Tower,<br>Hi-Tech Park, Rajshahi, Bangladesh</span></li>
                         <li class="flex items-center gap-3"><i class="ph-fill ph-phone text-primary"></i><span>+8801717-187955</span></li>
                         <li class="flex items-center gap-3"><i class="ph-fill ph-envelope-simple text-primary"></i><span>asifiqbal.abir@gmail.com</span></li>
                     </ul>
                 </div>
             </div>
-            <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
+            <div class="border-t border-gray-200 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
                 <p class="text-gray-500 text-sm text-center md:text-left">&copy; 2026 Ontek Horizon. All rights reserved.</p>
                 <div class="flex space-x-6 text-sm text-gray-500">
-                    <a href="#" class="hover:text-white">Privacy Policy</a>
-                    <a href="#" class="hover:text-white">Terms of Service</a>
+                    <a href="#" class="hover:text-gray-900">Privacy Policy</a>
+                    <a href="#" class="hover:text-gray-900">Terms of Service</a>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../scripts/common.js" defer></script>
     <script src="../scripts/careers.js" defer></script>
     <script src="../scripts/preloader.js" defer></script>
 </body>
