--- a/pages/careers/internship.html
+++ b/pages/careers/internship.html
@@ -242,6 +242,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../../scripts/common.js" defer></script>
     <script src="../../scripts/internship.js" defer></script>
     <script src="../../scripts/preloader.js" defer></script>
     </body>
