--- a/pages/careers/jobapplication.html
+++ b/pages/careers/jobapplication.html
@@ -262,6 +262,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../../scripts/common.js" defer></script>
     <script src="../../scripts/jobapplication.js" defer></script>
     <script src="../../scripts/preloader.js" defer></script>
     </body>
