--- a/pages/events/ecommerceseminar.html
+++ b/pages/events/ecommerceseminar.html
@@ -199,7 +199,8 @@
     
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
-    <!-- Inline scripts moved to ../../scripts/ecommerceseminar.js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../../scripts/common.js" defer></script>
     <script src="../../scripts/ecommerceseminar.js" defer></script>
     <script src="../../scripts/preloader.js" defer></script>
     </body>
