--- a/pages/events/jobfairregistration.html
+++ b/pages/events/jobfairregistration.html
@@ -227,6 +227,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../../scripts/common.js" defer></script>
     <script src="../../scripts/jobfairregistration.js" defer></script>
     <script src="../../scripts/preloader.js" defer></script>
     </body>
