--- a/pages/team.html
+++ b/pages/team.html
@@ -323,7 +323,7 @@
                             <img class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" style="object-position: 50% 30%;" src="../images/Mita.jpg" alt="Maisha Farzana Rahman Mita - Content Writer" loading="lazy" onerror="this.onerror=null;this.src='https://placehold.co/600x600/0f172a/ffffff?text=Maisha+Mita'">
                         </div>
                         <div class="p-6">
-                            <h3 class="text-lg font-bold text-orange-900 group-hover:text-white">Maisha Farzana Rahman Mita</h3>
+                            <h3 class="text-lg font-bold text-orange-900 group-hover:text-white">Maisha Fahmida Rahman Mita</h3>
                             <p class="text-sm text-orange-700 font-medium text-center group-hover:text-orange-100">Content Writer</p>
                         </div>
                     </div>
