Life is Beautiful💜

--- a/pages/team.html
+++ b/pages/team.html
@@ -113,20 +113,20 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-red-900 group-hover:text-white">Sagin Jahan</h3>
                             <p class="text-sm text-red-700 font-medium text-center group-hover:text-red-100">Founder & CEO</p>
-                            <a href="https://www.linkedin.com/in/sagin-jahan-302a27394/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-red-600 hover:text-red-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/sagin-jahan-302a27394/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
                     </div>
 
-                    <div class="bg-gradient-to-br from-indigo-100 to-indigo-200 rounded-xl shadow-lg overflow-hidden text-center group border border-indigo-300 hover:border-indigo-700 hover:from-indigo-600 hover:to-indigo-700 transition-all spotlight-card w-full sm:w-[calc(50%-12px)] lg:w-[calc(33.333%-24px)] max-w-sm" data-aos="fade-up" data-aos-delay="200">
+                    <div class="bg-gradient-to-br from-red-100 to-red-200 rounded-xl shadow-lg overflow-hidden text-center group border border-red-300 hover:border-red-700 hover:from-red-600 hover:to-red-700 transition-all spotlight-card w-full sm:w-[calc(50%-12px)] lg:w-[calc(33.333%-24px)] max-w-sm" data-aos="fade-up" data-aos-delay="200">
                         <div class="h-56 overflow-hidden relative">
                             <img class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" style="object-position: 50% 30%;" src="" alt="Co-Founder" loading="lazy" onerror="this.onerror=null;this.src='https://placehold.co/600x600/0f172a/ffffff?text=Co-Founder'">
                         </div>
                         <div class="p-6">
-                            <h3 class="text-lg font-bold text-indigo-900 group-hover:text-white">XYZ</h3>
-                            <p class="text-sm text-indigo-700 font-medium text-center group-hover:text-indigo-100">Co-Founder</p>
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-indigo-600 hover:text-indigo-900 transition-colors group-hover:text-white mt-3">
+                            <h3 class="text-lg font-bold text-red-900 group-hover:text-white">XYZ</h3>
+                            <p class="text-sm text-red-700 font-medium text-center group-hover:text-red-100">Co-Founder</p>
+                            <a href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -146,6 +146,9 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-emerald-900 group-hover:text-white">Asif Iqbal Abir</h3>
                             <p class="text-sm text-emerald-700 font-medium text-center group-hover:text-emerald-100">Manager</p>
+                            <a href="https://www.linkedin.com/in/md-asif-iqbal-797a131b2/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
+                                <i class="ph-fill ph-linkedin-logo text-2xl"></i>
+                            </a>
                         </div>
                     </div>
 
@@ -157,9 +160,39 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-emerald-900 group-hover:text-white">Naima Tasnim Nova</h3>
                             <p class="text-sm text-emerald-700 font-medium text-center group-hover:text-emerald-100">E-Commerce Account Manager</p>
-                            <a href="https://www.linkedin.com/in/naima-tasnim-nova-5678a4227" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-emerald-600 hover:text-emerald-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/naima-tasnim-nova-5678a4227" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Advisor Team Section -->
+            <div class="mb-16" data-aos="fade-up">
+                <h3 class="text-2xl font-heading font-bold text-white mb-8 text-center">Advisor Team</h3>
+                <div class="flex flex-wrap justify-center gap-4 sm:gap-6 lg:gap-8">
+                    
+                    <div class="bg-gradient-to-br from-teal-100 to-teal-200 rounded-xl shadow-lg overflow-hidden text-center group border border-teal-300 hover:border-teal-700 hover:from-teal-600 hover:to-teal-700 transition-all spotlight-card w-full sm:w-[calc(50%-12px)] lg:w-[calc(25%-24px)]" data-aos="fade-up" data-aos-delay="100">
+                        <div class="h-56 overflow-hidden relative">
+                            <img class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" style="object-position: 50% 30%;" src="../images/sayemvai.jpg" alt="Sayem Babu - Advisor" loading="lazy" onerror="this.onerror=null;this.src='https://placehold.co/600x600/0f172a/ffffff?text=Sayem+Babu'">
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-lg font-bold text-teal-900 group-hover:text-white">Sayem Babu</h3>
+                            <p class="text-sm text-teal-700 font-medium text-center group-hover:text-teal-100">Advisor</p>
+                            <a href="https://www.linkedin.com/in/sayemventures/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
+                                <i class="ph-fill ph-linkedin-logo text-2xl"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="bg-gradient-to-br from-teal-100 to-teal-200 rounded-xl shadow-lg overflow-hidden text-center group border border-teal-300 hover:border-teal-700 hover:from-teal-600 hover:to-teal-700 transition-all spotlight-card w-full sm:w-[calc(50%-12px)] lg:w-[calc(25%-24px)]" data-aos="fade-up" data-aos-delay="200">
+                        <div class="h-56 overflow-hidden relative">
+                            <img class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" style="object-position: 50% 30%;" src="../images/sonyvai.jpeg" alt="Md. Sony - Advisor" loading="lazy" onerror="this.onerror=null;this.src='https://placehold.co/600x600/0f172a/ffffff?text=Md.+Sony'">
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-lg font-bold text-teal-900 group-hover:text-white">Md. Sony</h3>
+                            <p class="text-sm text-teal-700 font-medium text-center group-hover:text-teal-100">Advisor</p>
                         </div>
                     </div>
                 </div>
@@ -175,8 +208,8 @@
                         </div>
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-purple-900 group-hover:text-white">Md Mazharul Islam Roni</h3>
-                            <p class="text-sm text-purple-700 font-medium text-center group-hover:text-purple-100">Account Coordinator (E-commerce)</p>
-                            <a href="https://www.linkedin.com/in/mazharul-roni" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-purple-600 hover:text-purple-900 transition-colors group-hover:text-white mt-3">
+                            <p class="text-sm text-purple-700 font-medium text-center group-hover:text-purple-100">Account Coordinator<br>(E-commerce)</p>
+                            <a href="https://www.linkedin.com/in/mazharul-roni" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -189,8 +222,8 @@
                         </div>
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-purple-900 group-hover:text-white">Sumaiya Akter</h3>
-                            <p class="text-sm text-purple-700 font-medium text-center group-hover:text-purple-100">Account Coordinator (E-commerce)</p>
-                            <a href="https://www.linkedin.com/in/sumiislamtoha" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-purple-600 hover:text-purple-900 transition-colors group-hover:text-white mt-3">
+                            <p class="text-sm text-purple-700 font-medium text-center group-hover:text-purple-100">Account Coordinator<br>(E-commerce)</p>
+                            <a href="https://www.linkedin.com/in/sumiislamtoha" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -210,7 +243,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-blue-900 group-hover:text-white">Rowdraraz Paul</h3>
                             <p class="text-sm text-blue-700 font-medium text-center group-hover:text-blue-100">Web Developer</p>
-                            <a href="https://www.linkedin.com/in/rowdraraz-paul-511a3a374/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-blue-600 hover:text-blue-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/rowdraraz-paul-511a3a374/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -224,7 +257,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-blue-900 group-hover:text-white">Md. Mueid Shahriar</h3>
                             <p class="text-sm text-blue-700 font-medium text-center group-hover:text-blue-100">Web Developer</p>
-                            <a href="https://www.linkedin.com/in/mueid16/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-blue-600 hover:text-blue-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/mueid16/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -238,7 +271,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-blue-900 group-hover:text-white">Partho Sarkar</h3>
                             <p class="text-sm text-blue-700 font-medium text-center group-hover:text-blue-100">Web Developer</p>
-                            <a href="https://www.linkedin.com/in/parth0/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-blue-600 hover:text-blue-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/parth0/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -252,7 +285,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-blue-900 group-hover:text-white">Ayon Biswas</h3>
                             <p class="text-sm text-blue-700 font-medium text-center group-hover:text-blue-100">Graphic Designer</p>
-                            <a href="https://www.linkedin.com/in/ayon-biswas-87748b264/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-blue-600 hover:text-blue-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/ayon-biswas-87748b264/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -272,7 +305,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-orange-900 group-hover:text-white">Md. Abu Sufiyan</h3>
                             <p class="text-sm text-orange-700 font-medium text-center group-hover:text-orange-100">Content Writer</p>
-                            <a href="https://www.linkedin.com/in/md-abusufiyan-378741269/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-orange-600 hover:text-orange-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/md-abusufiyan-378741269/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -286,7 +319,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-orange-900 group-hover:text-white">Tanvir Akter Sonia</h3>
                             <p class="text-sm text-orange-700 font-medium text-center group-hover:text-orange-100">Content Writer</p>
-                            <a href="https://www.linkedin.com/in/tanvir-akter-sonia-525139255" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-orange-600 hover:text-orange-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/tanvir-akter-sonia-525139255" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
@@ -311,7 +344,7 @@
                         <div class="p-6">
                             <h3 class="text-lg font-bold text-orange-900 group-hover:text-white">Maoluda Khatun Monira</h3>
                             <p class="text-sm text-orange-700 font-medium text-center group-hover:text-orange-100">Content Writer</p>
-                            <a href="https://www.linkedin.com/in/maoluda-monira-370664300" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-orange-600 hover:text-orange-900 transition-colors group-hover:text-white mt-3">
+                            <a href="https://www.linkedin.com/in/maoluda-monira-370664300" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-[#0A66C2] hover:text-[#004182] transition-colors group-hover:text-white mt-3">
                                 <i class="ph-fill ph-linkedin-logo text-2xl"></i>
                             </a>
                         </div>
